<resources>
    <string name="app_name">NetCar</string>
    <string name="please_login">Please login to use the application</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="btn_signin_text">Sign in</string>
    <string name="btn_sigin_error_email_1">Please enter your email address</string>
    <string name="btn_sigin_error_username_1">Please enter your username</string>
    <string name="btn_sigin_error_username_2">The username is too short</string>
    <string name="btn_sigin_error_username_3">The username may not contain special characters</string>
    <string name="btn_sigin_error_email_2">Please enter a valid email address</string>
    <string name="btn_sigin_error_password_1">Please enter your password</string>
    <string name="btn_sigin_error_password_2">The password is too short</string>
    <string name="btn_sigin_error_password_3">The password may not contain special characters</string>
    <string name="btn_sigin_error_password_4">The passwords do not match</string>
    <string name="btn_signup_text">Sign up</string>
    <string name="signup_text">Please fill the following items:</string>
    <string name="profile_name">User Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="press_this_button">Press this button</string>
    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="credits">Credits</string>
    <string name="balance">Balance:</string>
    <string name="your_rating">Your rating:</string>
    <string name="menu_rating">Rating</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_map">Map</string>
    <string name="menu_logout">Logout</string>
    <string name="out_of_5">out of 5</string>
    <string name="btn_add_credits">Add credits</string>
    <string name="are_you_sure_want_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_settings">Settings</string>
    <string name="successfully_registered">You have successfully registered. Now you can login to use the app!</string>
    <string name="register_as_driver">Register as driver</string>
    <string name="active_driver">Active driver</string>
    <string name="dialog_title_adding_credits">ADDING CREDITS</string>
    <string name="dialog_message_adding_credits">Enter credits:</string>
    <string name="dialog_button_adding_credits">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btn_register_text">Register</string>
    <string name="license_plate_number">License Plate Number</string>
    <string name="car_brand">Car Brand</string>
    <string name="seats">Number of seats</string>
    <string name="model">Model</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="driver_registration">Driver registration</string>
    <string name="save">Save</string>
    <string name="changes_saved">Changes have been saved</string>
    <string name="image_saved">The new profile image has been saved</string>
    <string name="no_changes">Nothing has been changed</string>
    <string name="confirm_password_to_save">Please confirm your password in order to save the changes</string>
    <string name="file_upload">Tap on the image and select a file to upload</string>
    <string name="profile_name2">Profile Name</string>
    <string name="new_password">New Password</string>
    <string name="menu_trips">Trips</string>
    <string name="btn_accept_text">Accept</string>
    <string name="trip_confirmation">Trip confirmation</string>
    <string name="package_shipment">Package shipment</string>
    <string name="number_of_package">Number of package</string>
    <string name="controls">Controls</string>
    <string name="car_boot">Car has boot</string>
    <string name="username">Username</string>
    <string name="car_image" translatable="false">Car\'s image</string>
    <string name="netcar_logo" translatable="false">NetCar logo</string>
    <string name="credit_image" translatable="false">Credit Image</string>
    <string name="profile_image" translatable="false">Profile image</string>
    <string name="give_destination">You must give your destination</string>
    <string name="touch_on_map">Touch on the map to select your destination</string>
    <string name="finalize_location">Finalize destination</string>
    <string name="back_arrow">back</string>
    <string name="driver_rating">Driver rating</string>
    <string name="submit">Submit</string>
</resources>