<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_menu_cash"
            android:title="@string/menu_credits" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/menu_rating" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_logout"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:title="@string/menu_logout" />
</menu>