<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="hu.bme.aut.netcar.fragments.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_credits"
        android:name="hu.bme.aut.netcar.fragments.credits.CreditsFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />

    <fragment
        android:id="@+id/nav_rating"
        android:name="hu.bme.aut.netcar.fragments.rating.RatingFragment"
        android:label="@string/menu_rating"
        tools:layout="@layout/fragment_rating" />
</navigation>