<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:paddingHorizontal="28dp"
    android:paddingVertical="256dp"
    android:weightSum="3"
    android:orientation="vertical"
    tools:context="hu.bme.aut.netcar.SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textSize="16dp"
        android:textColor="@color/textColor"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="28dp"/>

    <EditText
        android:id="@+id/etNameGiven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_name"
        android:textColorHint="@color/editTextHintColor"
        android:textColor="@color/editTextColor"
        android:theme="@style/editTextTheme"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etEmailGiven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textColorHint="@color/editTextHintColor"
        android:textColor="@color/editTextColor"
        android:theme="@style/editTextTheme"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPasswordGiven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/editTextHintColor"
        android:textColor="@color/editTextColor"
        android:theme="@style/editTextTheme"
        android:inputType="textWebPassword"/>

    <EditText
        android:id="@+id/etPasswordConfGiven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:textColorHint="@color/editTextHintColor"
        android:textColor="@color/editTextColor"
        android:theme="@style/editTextTheme"
        android:inputType="textWebPassword"/>

</LinearLayout>