<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:padding="80dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:textColor="@color/textColor"
        android:textSize="35dp"
        android:text="@string/credits"
        android:paddingBottom="24dp"/>

    <ImageView
        android:id="@+id/creditimage"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:layout_gravity="center"
        android:src="@drawable/cash" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:text="@string/balance" />

    <TextView
        android:id="@+id/tvCreditAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:textColor="@color/textColor"
        android:textSize="25dp"
        android:text="$100"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnAddCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_credits"/>
</LinearLayout>