<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_driver_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/car_image"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/user_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/placeholder"
        android:contentDescription="@string/car_image" />

    <RatingBar
        android:id="@+id/user_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/driver_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:progressTint="@color/colorPrimary"
        android:secondaryProgressTint="@color/colorPrimary"
        android:stepSize="0.5"
        android:isIndicator="true"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/driver_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/car_brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/car_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/car_plate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/car_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/car_model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/car_plate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:theme="@style/CheckBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/checkbox_textview"
        app:layout_constraintTop_toBottomOf="@+id/car_plate"
        app:layout_constraintVertical_bias="0.315" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_button"
        android:text="@string/btn_accept_text"

        android:textColor="@color/btnTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_editText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_button"
        android:text="@string/btn_cancel_text"
        android:textColor="@color/btnTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_editText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/checkbox_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="116dp"
        android:gravity="center"
        android:text="@string/package_shipment"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_plate"
        app:layout_constraintVertical_bias="0.315" />

    <EditText
        android:id="@+id/checkbox_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/number_of_package"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="1"
        android:textColor="@color/textColor"
        android:textColorHint="@color/editTextHintColor"
        android:theme="@style/editTextTheme"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_textview"
        app:layout_constraintVertical_bias="0.151"/>

</androidx.constraintlayout.widget.ConstraintLayout>